metadata/force-app/main/default/objects/CustomName_FIrLv__c/CustomName_FIrLv__c.object-meta.xml
<CustomObject>
    <description>Description_PbOEh</description>
    <label>CustomLabel_qWdaf</label>
    <nameField>
        <label>CustomLabel_qWdaf</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_qWdafs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>