metadata/force-app/main/default/objects/CustomName_FIrLv__c/fields/CustomField_flepC__c.field-meta.xml
<CustomField>
    <fullName>CustomField_flepC__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldYyQoC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>